k8s/deployment-doctor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: doctor-service
  template:
    metadata:
      labels:
        app: doctor-service
    spec:
      containers:
      - name: doctor-service
        image: shubhpatel2610/doctor-service:latest
        ports:
        - containerPort: 3003
