k8s/email-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      restartPolicy: Always
      containers:
      - name: email-service
        image: shubhpatel2610/email-service:latest
