k8s/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin-service
  ports:
    - port: 3004
      targetPort: 3004
  type: ClusterIP
