k8s/service-doctor.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
spec:
  selector:
    app: doctor-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
