k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: careconnect-ingress
spec:
  rules:
  - host: careconnect.local
    http:
      paths:
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /api/v1/user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3002
      - path: /api/v1/doctor
        pathType: Prefix
        backend:
          service:
            name: doctor-service
            port:
              number: 3003
      - path: /api/v1/admin
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 3004
              
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: careconnect-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1/$2
# spec:
#   rules:
#   - host: careconnect.local
#     http:
#       paths:
#       - path: /api/v1/auth(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: auth-service
#             port:
#               number: 3001
#       - path: /api/v1/user(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: user-service
#             port:
#               number: 3002
#       - path: /api/v1/doctor(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: doctor-service
#             port:
#               number: 3003
#       - path: /api/v1/admin(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: admin-service
#             port:
#               number: 3004
